--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Cappadocia</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -181,10 +182,10 @@
             После ужина, пройдя на террасу, вы сможете заказать напиток и полюбоваться закатом солнца над деревней.
           </p>
           <div class="hotel__gallery">
-            <a href=""><img src="" alt=""></a>
-            <a href=""><img src="" alt=""></a>
-            <a href=""><img src="" alt=""></a>
-            <a href=""><img src="" alt=""></a>
+            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery1.jpg"><img src="images/hotel-gallery1.jpg" alt=""></a>
+            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery2.jpg"><img src="images/hotel-gallery2.jpg" alt=""></a>
+            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery3.jpg"><img src="images/hotel-gallery3.jpg" alt=""></a>
+            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery4.jpg"><img src="images/hotel-gallery4.jpg" alt=""></a>
           </div>
         </div>
       </div>
@@ -192,6 +193,7 @@
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
