--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cappadocia</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">p
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/slick.css">
 </head>
 
 <body>
@@ -182,19 +182,75 @@
             После ужина, пройдя на террасу, вы сможете заказать напиток и полюбоваться закатом солнца над деревней.
           </p>
           <div class="hotel__gallery">
-            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery1.jpg"><img src="images/hotel-gallery1.jpg" alt=""></a>
-            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery2.jpg"><img src="images/hotel-gallery2.jpg" alt=""></a>
-            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery3.jpg"><img src="images/hotel-gallery3.jpg" alt=""></a>
-            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery4.jpg"><img src="images/hotel-gallery4.jpg" alt=""></a>
+            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery1.jpg"><img
+                src="images/hotel-gallery1.jpg" alt=""></a>
+            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery2.jpg"><img
+                src="images/hotel-gallery2.jpg" alt=""></a>
+            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery3.jpg"><img
+                src="images/hotel-gallery3.jpg" alt=""></a>
+            <a data-fancybox="images" data-width="2048" data-height="1365" href="images/hotel-gallery4.jpg"><img
+                src="images/hotel-gallery4.jpg" alt=""></a>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <section class="price page-section">
+    <div class="container">
+      <h3 class="price__title title">
+        Price
+        <span>Стоимость услуг</span>
+      </h3>
+      <div class="price__inner">
+        <div class="price__on">
+          <div class="price__on-title">
+            Включено
+          </div>
+          <ul class="price__list">
+            <li class="price__list-item">
+              Проживание в двухместном номере в отеле с завтраками
+            </li>
+            <li class="price__list-item">
+              Индивидуальный трансфер для нашей группы из Анкары и обратно
+            </li>
+            <li class="price__list-item">
+              Экскурсия на Солёное озеро
+            </li>
+            <li class="price__list-item">
+              Индивидуальная дневная экскурсия по лучшим местам Каппадокии с личным транспортом
+            </li>
+            <li class="price__list-item">
+              Фотосессия с профессиональным фотографом для каждой участницы
+              (Несколько локаций, 5 лучших фото в обработке фотографа и весь материал (до 100 фотографий)
+            </li>
+          </ul>
+        </div>
+        <div class="price__off">
+          <div class="price__off-title">
+            Не включено
+          </div>
+          <ul class="price__list">
+            <li class="price__list-item">
+              Авиа Киев-Анкара-Киев (140-170$)
+            </li>
+            <li class="price__list-item">
+              Обеды и ужины (150$ на поездку)
+            </li>
+            <li class="price__list-item">
+              Воздушный шар 200$
+            </li>
+            <li class="price__list-item">
+              Дополнительные экскурсии (по желанию) от 30$
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="js/main.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
-  <script src="js/main.js"></script>
 </body>
 
 </html>
