--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cappadocia</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/jquery.fancybox.min.css">p
+  <link rel="stylesheet" href="css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/slick.css">
 </head>
 
 <body>
+  
   <!-- заголовок -->
   <header class="header">
     <!-- контейнер -->
@@ -247,6 +248,64 @@
       </div>
     </div>
   </section>
+  <section class="contacts page-section">
+    <div class="container">
+      <div class="contacts__inner">
+        <div class="contacts__content">
+          <div class="contacts__info">
+            <div class="contacts__date">
+              1.07.2021
+              <span>Ближайшая дата тура </span>
+            </div>
+            <div class="contacts__price">
+              490$
+              <span>Стоимость</span>
+            </div>
+          </div>
+          <form class="contacts__form">
+            <h4 class="contacts__form-title">Оставить заявку или задать вопрос</h4>
+            <input class="contacts__form-input" type="text" placeholder="Имя">
+            <input class="contacts__form-input" type="text" placeholder="Телефон">
+            <button class="contacts__form-btn" type="submit">ОСТАВИТЬ ЗАЯВКУ</button>
+          </form>
+        </div>
+        <img class="contacts__images" src="images/contacts-img.jpg" alt="">
+      </div>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__inner">
+        <div class="footer__contacts">
+          <div class="footer__contacts-title">
+            Contacts
+          </div>
+          <a class="footer__phone" href="tel:380665557776">+38(066)555-777-6</a>
+          
+          <a class="footer__email" href="mailto:сappadocia.tours@gmail.com">сappadocia.tours@gmail.com</a>
+          <div class="footer__social">
+            <a class="footer__social-link" href="#">
+<img src="images/youtub.svg" alt="">
+            </a>
+            <a class="footer__social-link" href="#">
+<img src="images/instagram.svg" alt="">
+            </a>
+            <a class="footer__social-link" href="#">
+<img src="images/facebook.svg" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="footer__text">
+          Dreams come true
+        </div>
+      </div>
+    </div>
+  </footer>
+
+
+
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/slick.min.js"></script>
